hphp/test/zend/good/tests/classes/abstract_final.php.expectf

Fatal error: Class fail contains an abstract method and must therefore be declared abstract in %s/abstract_final.php on line 3
